--- a/yuchdroid16/res/menu/yuch_logon_menu.xml
+++ b/yuchdroid16/res/menu/yuch_logon_menu.xml
@@ -4,4 +4,8 @@
 	<item 
     	android:id="@+id/yuch_logon_menu_refresh"
     	android:title="@string/yuch_logon_menu_refresh"/> 
+    <item 
+    	android:id="@+id/yuch_logon_menu_quit"
+    	android:title="@string/yuch_logon_menu_quit"/> 
+    	
 </menu>
