--- a/yuchdroid16/res/layout/main.xml
+++ b/yuchdroid16/res/layout/main.xml
@@ -7,7 +7,7 @@
     android:background="#eee">
     <ScrollView 
         android:layout_height="wrap_content"
-        android:layout_width="wrap_content">
+        android:layout_width="fill_parent">
         <LinearLayout 
 	    	android:layout_height="wrap_content" 
 	    	android:layout_width="fill_parent"
@@ -17,12 +17,8 @@
 	    		android:layout_width="wrap_content"
 				android:layout_gravity="center_horizontal"
 			    android:layout_centerHorizontal="true"
+			    android:layout_marginBottom="50dp"
 	    		android:orientation="horizontal">
-	    		<ImageView
-			    	android:layout_height="wrap_content"
-			    	android:layout_width="wrap_content"
-			    	android:src="@drawable/long_year_logo"
-			    />
 		    	<ImageView
 			    	android:layout_height="wrap_content"
 			    	android:layout_width="wrap_content"
@@ -31,111 +27,247 @@
 			    />    
 	    	</LinearLayout>
 	    	
-		    <LinearLayout 
-		    	android:layout_height="wrap_content" 
-		    	android:layout_width="fill_parent"
-		    	android:orientation="horizontal">
-		    	<TextView
-		    		android:text="@string/login_host"
-		    		android:layout_height="fill_parent" 
-		    		android:layout_width="70dp"
-		    		android:gravity="center|right"
-		    		android:textColor="#000"
-		    	/>
-		    	<EditText
-		    		android:id="@+id/login_host"
-		    		android:layout_height="fill_parent" 
-		    		android:layout_width="250dp"
-		    		android:singleLine="true"
-		    		android:background="@drawable/login_edit"
-		    		android:hint="@string/login_host_hint"
-		    	/>
-		    </LinearLayout>
-		    <LinearLayout 
-		    	android:layout_height="wrap_content" 
-		    	android:layout_width="fill_parent"
-		    	android:orientation="horizontal">
-		    	<TextView
-		    		android:text="@string/login_port"
-		    		android:layout_height="fill_parent" 
-		    		android:layout_width="70dp"
-		    		android:gravity="center|right"
-		    		android:textColor="#000" 
-		    	/>
-		    	<EditText
-		    		android:id="@+id/login_port"
-		    		android:layout_height="fill_parent" 
-		    		android:layout_width="250dp"
-		    		android:numeric="integer"
-		    		android:maxLength="5"
-		    		android:singleLine="true"
-		    		android:background="@drawable/login_edit"
-		    		android:hint="@string/login_port_hint"
-		    	/>
-		    </LinearLayout>
-		    <LinearLayout 
-		    	android:layout_height="wrap_content" 
-		    	android:layout_width="fill_parent"
-		    	android:orientation="horizontal">
-		    	<TextView
-		    		android:text="@string/login_user_pass"
-		    		android:layout_height="fill_parent" 
-		    		android:layout_width="70dp"
-		    		android:gravity="center|right"
-		    		android:textColor="#000" 
-		    	/>
-		    	<EditText
-		    		android:id="@+id/login_user_pass"
-		    		android:layout_height="fill_parent" 
-		    		android:layout_width="250dp"
-		    		android:maxLength="120"
-		    		android:singleLine="true"
-		    		android:password="true"
-		    		android:background="@drawable/login_edit"
-		    		android:hint="@string/login_user_pass_hint"
-		    	/>
-		    </LinearLayout>
-		
+	    	<LinearLayout
+	    	    android:id="@+id/login_init_panel"
+	    	    android:layout_height="wrap_content" 
+	    		android:layout_width="fill_parent"
+	    		android:orientation="vertical">
+		    		    	    
+			    <Button android:text="@string/login_init_official_host" 
+			      		android:id="@+id/login_init_official_host" 
+			      		android:layout_height="wrap_content" 
+			      		android:layout_width="fill_parent"
+			      		android:paddingLeft="20dp"
+			      		android:paddingRight="20dp"
+			      		android:paddingTop="5dp"
+			      		android:paddingBottom="5dp"
+			      		android:layout_marginLeft="20sp"
+			      		android:layout_marginRight="20sp"
+			      		android:gravity="center"
+			      		android:textColor="#fff"
+			      		android:textStyle="bold"
+			      		android:textSize="18dp"
+			      		android:background="@drawable/login_button"
+				/>
+			    
+			    <Button android:text="@string/login_init_own_host" 
+			      		android:id="@+id/login_init_own_host" 
+			      		android:layout_height="wrap_content" 
+			      		android:layout_width="fill_parent"
+			      		android:paddingLeft="20dp"
+			      		android:paddingRight="20dp"
+			      		android:paddingTop="5dp"
+			      		android:paddingBottom="5dp"
+			      		android:layout_marginTop="10sp"
+			      		android:layout_marginLeft="20sp"
+			      		android:layout_marginRight="20sp"
+			      		android:gravity="center"
+			      		android:textColor="#fff"
+			      		android:textStyle="bold"
+			      		android:textSize="18dp"
+			      		android:background="@drawable/login_button"
+				/>
+	    	</LinearLayout>
+	    	
 			<LinearLayout 
-				android:layout_width="fill_parent"
-				android:layout_height="wrap_content"
-				android:layout_marginTop="5dp"
-				android:orientation="horizontal">
-				<Button android:text="@string/start_svr_but" 
-		      		android:id="@+id/login_start_svr" 
-		      		android:layout_height="wrap_content" 
-		      		android:layout_width="wrap_content"
-		      		android:paddingLeft="20dp"
-		      		android:paddingRight="20dp"
-		      		android:paddingTop="5dp"
-		      		android:paddingBottom="5dp"
-		      		android:layout_marginLeft="10sp"
-		      		android:gravity="center"
-		      		android:textColor="#fff"
-		      		android:textStyle="bold"
-		      		android:textSize="18dp"
-		      		android:background="@drawable/login_button"
-			    />
-				
-			  	<TextView android:text="TextView" 
-		  			android:id="@+id/login_connect_text"
-		  			android:textSize="20dp" 
-		  			android:layout_width="fill_parent" 
-		  			android:layout_height="wrap_content"
-		  			android:layout_marginLeft="10dp"
-		  			android:textColor="#000" 
-		  			android:layout_gravity="center_vertical"
-				/> 
+			    android:id="@+id/login_account_panel"
+	    	    android:layout_height="wrap_content" 
+	    		android:layout_width="fill_parent"
+	    		android:orientation="vertical">
+			    <LinearLayout 
+			    	android:layout_height="wrap_content" 
+			    	android:layout_width="fill_parent"
+			    	android:orientation="horizontal">
+			    	<TextView
+			    		android:text="@string/login_account"
+			    		android:layout_height="fill_parent" 
+			    		android:layout_width="70dp"
+			    		android:gravity="center|right"
+			    		android:textColor="#000"
+			    	/>
+			    	<EditText
+			    		android:id="@+id/login_account"
+			    		android:layout_height="fill_parent" 
+			    		android:layout_width="250dp"
+			    		android:singleLine="true"
+			    		android:background="@drawable/login_edit"
+			    		android:hint="@string/login_account_hint"
+			    	/>
+			    </LinearLayout>
+			    
+			    <LinearLayout 
+			    	android:layout_height="wrap_content" 
+			    	android:layout_width="fill_parent"
+			    	android:orientation="horizontal">
+			    	<TextView
+			    		android:text="@string/login_user_pass"
+			    		android:layout_height="fill_parent" 
+			    		android:layout_width="70dp"
+			    		android:gravity="center|right"
+			    		android:textColor="#000"
+			    	/>
+			    	<EditText
+			    		android:id="@+id/login_pass"
+			    		android:password="true"
+			    		android:layout_height="fill_parent" 
+			    		android:layout_width="250dp"
+			    		android:singleLine="true"
+			    		android:background="@drawable/login_edit"
+			    		android:hint="@string/login_user_pass_hint"
+			    	/>
+			    </LinearLayout>
+			    <LinearLayout
+			        android:layout_height="wrap_content" 
+			    	android:layout_width="wrap_content"
+			    	android:orientation="horizontal"
+			    	android:layout_gravity="center_horizontal"
+			    	android:layout_centerHorizontal="true"
+			    	android:layout_marginTop="10dp"
+			        >
+			    	
+			        <Button android:text="@string/login_login_btn" 
+				      		android:id="@+id/login_login_btn" 
+				      		android:layout_height="wrap_content" 
+				      		android:layout_width="wrap_content"
+				      		android:layout_marginRight="10dp"
+				      		android:paddingLeft="10dp"
+				      		android:paddingRight="10dp"
+				      		android:paddingTop="5dp"
+				      		android:paddingBottom="5dp"				      		
+				      		android:gravity="center"
+				      		android:textColor="#fff"
+				      		android:textStyle="bold"
+				      		android:textSize="18dp"
+				      		android:background="@drawable/login_button"
+					/>
+			        <Button android:text="@string/login_register_btn" 
+				      		android:id="@+id/login_register_btn" 
+				      		android:layout_height="wrap_content" 
+				      		android:layout_width="wrap_content"
+				      		android:paddingLeft="10dp"
+				      		android:paddingRight="10dp"
+				      		android:paddingTop="5dp"
+				      		android:paddingBottom="5dp"
+				      		android:gravity="center"
+				      		android:textColor="#fff"
+				      		android:textStyle="bold"
+				      		android:textSize="18dp"
+				      		android:background="@drawable/login_button"
+					/>
+			    </LinearLayout>
+			    
 			</LinearLayout>
+	    	    
+	    	<LinearLayout
+	    	    android:id="@+id/login_host_panel"
+	    	    android:layout_height="wrap_content" 
+	    		android:layout_width="fill_parent"
+	    		android:orientation="vertical">
+			    <LinearLayout 
+			    	android:layout_height="wrap_content" 
+			    	android:layout_width="fill_parent"
+			    	android:orientation="horizontal">
+			    	<TextView
+			    		android:text="@string/login_host"
+			    		android:layout_height="fill_parent" 
+			    		android:layout_width="70dp"
+			    		android:gravity="center|right"
+			    		android:textColor="#000"
+			    	/>
+			    	<EditText
+			    		android:id="@+id/login_host"
+			    		android:layout_height="fill_parent" 
+			    		android:layout_width="250dp"
+			    		android:singleLine="true"
+			    		android:background="@drawable/login_edit"
+			    		android:hint="@string/login_host_hint"
+			    	/>
+			    </LinearLayout>
+			    <LinearLayout 
+			    	android:layout_height="wrap_content" 
+			    	android:layout_width="fill_parent"
+			    	android:orientation="horizontal">
+			    	<TextView
+			    		android:text="@string/login_port"
+			    		android:layout_height="fill_parent" 
+			    		android:layout_width="70dp"
+			    		android:gravity="center|right"
+			    		android:textColor="#000" 
+			    	/>
+			    	<EditText
+			    		android:id="@+id/login_port"
+			    		android:layout_height="fill_parent" 
+			    		android:layout_width="250dp"
+			    		android:numeric="integer"
+			    		android:maxLength="5"
+			    		android:singleLine="true"
+			    		android:background="@drawable/login_edit"
+			    		android:hint="@string/login_port_hint"
+			    	/>
+			    </LinearLayout>
+			    <LinearLayout 
+			    	android:layout_height="wrap_content" 
+			    	android:layout_width="fill_parent"
+			    	android:orientation="horizontal">
+			    	<TextView
+			    		android:text="@string/login_user_pass"
+			    		android:layout_height="fill_parent" 
+			    		android:layout_width="70dp"
+			    		android:gravity="center|right"
+			    		android:textColor="#000" 
+			    	/>
+			    	<EditText
+			    		android:id="@+id/login_user_pass"
+			    		android:layout_height="fill_parent" 
+			    		android:layout_width="250dp"
+			    		android:maxLength="120"
+			    		android:singleLine="true"
+			    		android:password="true"
+			    		android:background="@drawable/login_edit"
+			    		android:hint="@string/login_user_pass_hint"
+			    	/>
+			    </LinearLayout>
 			
-			<TextView
-		   		android:text="@string/login_beta_prompt"
-		   		android:layout_height="wrap_content" 
-		   		android:layout_width="wrap_content"
-		   		android:layout_marginTop="5dp"
-		   		android:textSize="16sp"
-		   		android:textColor="#888"/>
-			
+				<LinearLayout 
+					android:layout_width="fill_parent"
+					android:layout_height="wrap_content"
+					android:layout_marginTop="5dp"
+					android:orientation="horizontal">
+					<Button android:text="@string/start_svr_but" 
+			      		android:id="@+id/login_start_svr" 
+			      		android:layout_height="wrap_content" 
+			      		android:layout_width="wrap_content"
+			      		android:paddingLeft="20dp"
+			      		android:paddingRight="20dp"
+			      		android:paddingTop="5dp"
+			      		android:paddingBottom="5dp"
+			      		android:layout_marginLeft="10sp"
+			      		android:gravity="center"
+			      		android:textColor="#fff"
+			      		android:textStyle="bold"
+			      		android:textSize="18dp"
+			      		android:background="@drawable/login_button"
+				    />
+					
+				  	<TextView android:text="TextView" 
+			  			android:id="@+id/login_connect_text"
+			  			android:textSize="20dp" 
+			  			android:layout_width="fill_parent" 
+			  			android:layout_height="wrap_content"
+			  			android:layout_marginLeft="10dp"
+			  			android:textColor="#000" 
+			  			android:layout_gravity="center_vertical"
+					/> 
+				</LinearLayout>
+				
+				<TextView
+			   		android:text="@string/login_beta_prompt"
+			   		android:layout_height="wrap_content" 
+			   		android:layout_width="wrap_content"
+			   		android:layout_marginTop="5dp"
+			   		android:textSize="16sp"
+			   		android:textColor="#888"/>
+	    	</LinearLayout>
     	</LinearLayout>
     </ScrollView>
 </LinearLayout>
