--- a/yuchdroid16/res/layout/mail_list_item.xml
+++ b/yuchdroid16/res/layout/mail_list_item.xml
@@ -21,7 +21,7 @@
 	    android:layout_width="0dp"
 	    android:layout_height="fill_parent"
 	    android:text="@string/mail_read_prompt"
-	    android:background="#ddd"
+	    android:background="#aaa"
 	    android:textColor="#000"
 	    android:padding="5dp"
 	    android:singleLine="true"
