增加 回复所有的功能 增加 长按条目产生的功能菜单

--- a/yuchdroid16/res/layout/mail_open.xml
+++ b/yuchdroid16/res/layout/mail_open.xml
@@ -66,6 +66,13 @@
 			android:layout_height="fill_parent"
 			android:layout_weight="1"
 			android:text="@string/mail_open_reply_btn"/>
+		
+		<Button 
+			android:id="@+id/mail_open_mail_reply_all_btn"
+			android:layout_width="0dp"
+			android:layout_height="fill_parent"
+			android:layout_weight="1"
+			android:text="@string/mail_open_reply_all_btn"/>
 			
 		<Button 
 			android:id="@+id/mail_open_mail_forward_btn"
